# reefbuilder_segmentation

./: .gitignore  .gitmessage  CONTRIBUTING.md  README.md  build_and_publish.sh  build_and_publish_pypi.sh  build_and_publish_testpypi.sh  pyproject.toml
CI/: README.md
CI/notebooks/: CI_Annotations_to_ABCD.ipynb  Creating_Analysis_Excel.ipynb
CI/scripts/: yolo_inference.py
coral-detection/utils/: helper.py
coral_detection/: config.py
coral_detection/checks/: images.py  labels.py
coral_detection/modelling/: base.py
coral_detection/preprocess/: core.py  dataset.py
coral_detection/scripts/: check_input_images.py  yolo_inference.py
coral_detection/utils/: checks.py  general.py  test_utils.py
coral_detection/utils/checks/: image_checks.py  label_checks.py
coral_detection/utils/modelling/: yolo.py
coral_detection/utils/preprocessor/: dataset.py
data/data_sample_correct/labels/: labels-coco.json
notebooks/: Full_AI_Pipeline.ipynb  reefbuilder_segmentation_colab_test.ipynb
reefbuilder_segmentation/: __init__.py  config.py  logging_config.json
reefbuilder_segmentation/checks/: images.py  labels.py
reefbuilder_segmentation/modelling/: base.py
reefbuilder_segmentation/preprocess/: dataset.py
reefbuilder_segmentation/utils/: general.py  test_utils.py  visualisation_utils.py
reefbuilder_segmentation/utils/checks/: image_checks.py  label_checks.py
reefbuilder_segmentation/utils/modelling/: yolo.py
scripts/: README.md  check_inference.py  check_input_images_and_labels.py  check_preprocessor.py  check_preprocessor_and_modelling.py  yolo_inference.py
src/: yolo_inference.py
src/utils/: helper.py  test_utils.py  visualisation_utils.py
(+2 files in other folders)
