# Overview:
# This pyproject.toml file manages the build, packaging, and distribution of the reefbuilder_segmentation library.
# It defines essential project metadata, dependencies, and settings used to develop and deploy the library.

[tool.poetry]
name = "reefbuilder_segmentation"
version = "1.0.0"
description = "An instance segmentation library focussed on solving marine conservation-related problems"
authors = ["Ishan Nangia <ishannangia.123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ultralytics = "^8.1.47"
supervision = "0.17"
dataclasses-json = "^0.6.4"
numpy = "1.26.4"
opencv-python = "^4.10.0.84"
fiftyone = "^1.0.0"
black = "^24.4.2"
flake8 = "^7.1.0"
scipy = "1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
